# app-masters-qa-challenge

./: README.md  pyproject.toml  pytest.ini
tests/functional_tests/: test_login_page.py  test_recover_password_page.py
tests/unit_tests/: test_view_login.py
utils/: browser.py
views/: fake_view.py
