[tool.poetry]
name = "app-masters-qa-changelle"
version = "0.1.0"
description = ""
authors = ["Mateus Acauhi <acauhi.mateus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
selenium = "^4.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
